# Jumpy

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  jumpy.py  pyproject.toml  setup.py
.github/workflows/: build-optional-test.yml  build-publish.yml  build-test.yml
jumpy/: __init__.py  _base_fns.py  _core.py  _create_data.py  _custom_fns.py  _custom_funcs.py  _factory_fns.py  _indexing.py  _manipulate_data.py  core.py  lax.py  linalg.py  ops.py  random.py
jumpy/numpy/: __init__.py  _factory_fns.py  _transform_data.py  _types.py  linalg.py
tests/: __init__.py  api_test.py  test_base_fns.py  test_index_update.py  test_indexing.py  test_jumpy.py  test_lax.py  test_linalg.py  test_numpy.py  test_numpy_only.py  test_only_numpy.py  test_ops.py  test_random.py  test_safe_norm.py  test_scan.py  test_segment_sum.py  test_take.py  test_to_be_removed.py  test_top_k.py  test_vmap.py  utils.py
