[project]
name = "jax-jumpy"
description = "Common backend for JAX or numpy."
version = "0.1.1"
authors = [
    { name = "Farama Foundation", email = "jkterry@farama.org" }
]
readme = "README.md"
license_file = { file="LICENSE" }
license = "Apache-2.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python=">=3.7"


dependencies = [
    "jax",
    "jaxlib",
    "numpy",
]

[project.urls]
Homepage = "https://farama.org/"
Repository = "https://github.com/Farama-Foundation/Jumpy"

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.hatch.build.targets.wheel]
only-include = ["jumpy.py"]

[build-system]
requires = ["hatchling>=1.4.0"]
build-backend = "hatchling.build"