[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jax-jumpy"
description = "Common backend for Jax or Numpy."
version = "1.0.0"
authors = [
    { name = "Farama Foundation", email = "contact@farama.org" }
]
readme = "README.md"
license = { file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python=">=3.7"

dependencies = [
    "numpy>=1.18.0",
]

[project.urls]
Homepage = "https://farama.org/"
Repository = "https://github.com/Farama-Foundation/Jumpy"

[project.optional-dependencies]
jax = [
    "jax>=0.3.24",
    "jaxlib>=0.3.24"
]
testing = [
    "pytest==7.1.3",
]

[tool.setuptools.packages.find]
include = ["jumpy", "jumpy.*"]
